@@ -1,3 +1,8 @@
+2019-10-28  Uroš Bizjak  <ubizjak@gmail.com>
+
+	PR target/92225
+	* gcc.target/i386/pr92225.c: New test.
+
 2019-10-28  Michael Matz  <matz@suse.de>
 
 	PR middle-end/90796
